# ocaml-nix-test

./: .gitignore  .ocamlformat  Makefile  default.nix  docker-compose.yml  dune  dune-project  ocaml_nix.opam  opam-selection.nix  schema-postgres.sql  schema-timescale.sql  schema.sql  shell.nix  watch.sh
frontend/: dune  frontend.ml
nix/: default.nix  ocamlfind.nix  opam-selection.nix  opam2nix.nix
scripts/: import-data  psql
static/: index.html
