opam-version: "2.0"
depends: [
  "ocamlformat" {build}
  "ocamlformat-rpc" {build}
  "utop" {build}
  "dream"
  "dream-cli"
  "dream-encoding"
  "dream-livereload"
  "dream-serve"
  "ppx_yojson_conv"
  "ppx_string_interpolation"
  "tyxml-ppx"
  "caqti-driver-sqlite3"
  "caqti-driver-postgresql"
  "js_of_ocaml"
  "js_of_ocaml-ppx"
  "ppx_expect"
]
build: [
  ["dune" "build" "-p" "ocaml_nix"]
]
