opam-version: "2.0"
depends: [
  "ocamlformat" {build}
  # disabling this due to ocaml-lsp bug that causes ppx'es to be uninterpreted
  # https://github.com/ocaml/ocaml-lsp/issues/513
  #"ocamlformat-rpc" {build}
  "utop" {build}
  "dream"
  "dream-cli"
  "dream-encoding"
  "dream-livereload"
  "dream-serve"
  "ppx_yojson_conv"
  "ppx_string_interpolation"
  "tyxml-ppx"
  "caqti-driver-sqlite3"
  "caqti-driver-postgresql"
  "js_of_ocaml"
  "js_of_ocaml-ppx"
  "ppx_expect"
  "ppx_rapper"
  "ppx_rapper_lwt"
]
build: [
  ["dune" "build" "-p" "ocaml_nix"]
]
